--- a/DEPLOY/gpg.html
+++ b/DEPLOY/gpg.html
@@ -42,9 +42,9 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
-					<li><a href="1.0.html"></a></li>
-					<li><a href="0.5.html"></a></li>
-					<li><a href="0.5.html"></a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li class="active"><a href="#">GPG</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="">Seminars <span class="caret"></span></a>
 						<ul class="dropdown-menu">
